--- a/functions/test-db/json2/scvo/templates/page.hbs
+++ b/functions/test-db/json2/scvo/templates/page.hbs
@@ -34,7 +34,7 @@
                 {{/if}}
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 sidebar page-sidebar">
-                {{#if supplimentaryResponses.related_posts.hits.hits}}
+                {{#compare supplimentaryResponses.related_posts.hits.total ">" 0}}
                 <h3 class="blogs">Related posts</h3>
                 <ul class="v-margin supplimentary-list">
                     {{#each supplimentaryResponses.related_posts.hits.hits}}
@@ -42,7 +42,7 @@
                     {{/each}}
                 </ul>
                 <a class="v-margin mdc-button mdc-button--raised" href="/post/categories/{{primaryResponse.hits.hits.[0]._source.categories_slug.[0]}}">Read more</a>
-                {{/if}}
+                {{/compare}}
             </div>
         </div>
     </div>
