--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -201,7 +201,6 @@ a:hover {
             }
         }
     }
-
     .cta-content.splash-image {
         background-image: linear-gradient(var(--mdc-theme-primary-fade),var(--mdc-theme-primary-fade)),url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2017/10/Drake-Music-03.jpg');
         height: auto;
@@ -235,7 +234,6 @@ a:hover {
             }
         }
     }
-
     .latest-content {
         background-color: var(--mdc-theme-background);
         padding: $spacing-unit/2 0 $spacing-unit*2;
@@ -769,7 +767,7 @@ h1.mdc-typography--title {
         background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2017/10/europe-and-the-third-sector-bg-1400x400.jpg');
     }
     .eu-are-valued .mdc-card__media {
-        background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2017/10/eu-are-valued-bg-1400x400.jpg');
+        background-image: url('https://storage.cloud.google.com/scvo-cms/scvo-cms-content/images/banners/eu-are-valued.png');
     }
     .building-healthier-happier-communities .mdc-card__media {
         background-image: url('https://storage.cloud.google.com/scvo-cms/scvo-cms-content/images/banners/building-healthier-happier-communities.png');
@@ -1044,7 +1042,7 @@ ul.supplimentary-list {
         .supplimentary-list-title {
             font-size: 1.1rem;
             line-height: 1.4rem;
-            margin-bottom: $spacing-unit/2;
+            margin-bottom: 0;
             display: block;
         }
         .supplimentary-list-text {
@@ -1058,6 +1056,9 @@ ul.supplimentary-list {
     li.supplimentary-list-item:not(:last-child){
         margin-bottom: $spacing-unit;
     }
+}
+.mdc-card__primary+.mdc-card__supporting-text {
+    margin-top: 0;
 }
 .sidebar .list {
     .post-info-author {
