--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -326,6 +326,11 @@ a:hover {
         width: 100%;
     }
 }
+.related-posts {
+    .mdc-button {
+        margin: $spacing-unit 0;
+    }
+}
 .v-align-img {
     height: 22vh;
     overflow: hidden;
@@ -1084,7 +1089,7 @@ p:last-child {
     margin-bottom: 0;
 }
 .full {
-    margin: $spacing-unit 0 $spacing-unit*1.5;
+    margin: $spacing-unit 0;
     h1:first-child,
     h2:first-child,
     h3:first-child,
@@ -1110,6 +1115,9 @@ p:last-child {
         }
     }
 }
+.post-content .full {
+    margin-top: $spacing-unit/2;
+}
 .sidebar {
     .blogs {
         margin-top: $spacing-unit;
@@ -1129,7 +1137,7 @@ p:last-child {
 }
 .page-sidebar h3:first-child ,
 .post-sidebar h3:first-child {
-    margin: $spacing-unit*1.5 0 $spacing-unit/4 !important;
+    margin: $spacing-unit 0 $spacing-unit/4 !important;
 }
 
 .page-content,
