--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -112,7 +112,7 @@ $nav-height: 2.5rem;
 }
 .digital {
     --mdc-theme-primary: #0063AF;
-    --mdc-theme-primary-fade: rgba(21, 101, 192, 0.89);
+    --mdc-theme-primary-fade: rgba(0, 99, 175, 0.89);
     --mdc-theme-primary-light: #0063AF;
     --mdc-theme-primary-dark: #004f8c;
 }
@@ -911,6 +911,9 @@ h1.mdc-typography--title {
             font-size: unset;
         }
     }
+}
+.mdc-card__actions ul {
+    padding: 0;
 }
 
 hr {
