--- a/functions/test-db/json2/scvo/templates/event-search.hbs
+++ b/functions/test-db/json2/scvo/templates/event-search.hbs
@@ -1,10 +1,5 @@
 <div class="splash-image {{> header_splash}}">
     <div class="container-fluid">
-        <ul class="breadcrumbs">
-            <li><a href="/">Home</a></li>
-            <li><a href="/services">Services</a></li>
-        </ul>
-
         <div class="mdc-layout-grid">
             {{#if primaryResponse.hits.hits.[0]._source.header_text}}
             <img src="{{primaryResponse.hits.hits.[0]._source.header_text}}" alt="{{primaryResponse.hits.hits.[0]._source.title}}" class="header-text" />
@@ -20,6 +15,11 @@
 </div>
 
 <div class="container-fluid">
+    <ul class="breadcrumbs">
+        <li><a href="/">SCVO</a></li>
+        <li><a href="/services">Services</a></li>
+    </ul>
+
     <div class="mdc-card">
         <section class="mdc-card__primary">
             <h2 class="mdc-card__title mdc-card__title--large">Find Events</h2>
