--- a/functions/test-db/json2/scvo/partials/breadcrumbs-posts.hbs
+++ b/functions/test-db/json2/scvo/partials/breadcrumbs-posts.hbs
@@ -1,8 +1,8 @@
-<ul class="breadcrumbs">
-    <li><a href="/">Home</a></li>
+<!-- <ul class="breadcrumbs">
+    <li><a href="/">SCVO</a></li>
     <li>
         <a href="/blogs">Blogs</a> /
         <a href="/press-media">Press releases</a> /
         <a href="/post/categories/news-campaigns-and-policy">News, campaigns &amp; policy</a>
     </li>
-</ul>
+</ul> -->
