--- a/functions/test-db/json2/scvo/partials/breadcrumbs.hbs
+++ b/functions/test-db/json2/scvo/partials/breadcrumbs.hbs
@@ -1,10 +1,12 @@
 {{#with primaryResponse.hits.hits.[0]._source}}
+{{#compare breadcrumb.length ">" 0}}
 <ul class="breadcrumbs">
-    <li><a href="/">Home</a></li>
+    <li><a href="/">SCVO</a></li>
     {{#each breadcrumb}}
     <li>
         <a href="{{replace url 'https://cms.scvo.org' ''}}">{{{striptags title}}}</a>
     </li>
     {{/each}}
 </ul>
+{{/compare}}
 {{/with}}
