--- a/functions/test-db/json2/scvo/templates/grant-digital-search.hbs
+++ b/functions/test-db/json2/scvo/templates/grant-digital-search.hbs
@@ -1,11 +1,5 @@
 <div class="splash-image {{> header_splash}}">
     <div class="container-fluid">
-        <ul class="breadcrumbs">
-            <li><a href="/">Home</a></li>
-            <li><a href="/digital">Digital</a></li>
-            <li><a href="/digital/participation">Participation</a></li>
-        </ul>
-
         <div class="mdc-layout-grid">
             {{#if primaryResponse.hits.hits.[0]._source.header_text}}
             <img src="{{primaryResponse.hits.hits.[0]._source.header_text}}" alt="{{primaryResponse.hits.hits.[0]._source.title}}" class="header-text" />
@@ -21,6 +15,12 @@
 </div>
 
 <div class="container-fluid">
+    <ul class="breadcrumbs">
+        <li><a href="/">SCVO</a></li>
+        <li><a href="/digital">Digital</a></li>
+        <li><a href="/digital/participation">Participation</a></li>
+    </ul>
+
     <div class="mdc-layout-grid">
         <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 content library-content">
