--- a/functions/test-db/json2/scvo/templates/page-setting-up-a-charity.hbs
+++ b/functions/test-db/json2/scvo/templates/page-setting-up-a-charity.hbs
@@ -24,14 +24,9 @@
     <div class="mdc-layout-grid">
         <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8 content page-content">
-                {{#if primaryResponse.hits.hits.[0]}}
                 {{#with primaryResponse.hits.hits.[0]._source}}
                 {{{rendered.full}}}
                 {{/with}}
-                {{else}}
-                <h2>Page not found</h2>
-                <!-- Please try searching. -->
-                {{/if}}
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 sidebar page-sidebar">
                 {{#compare supplimentaryResponses.related_posts.hits.total ">" 0}}
@@ -45,6 +40,24 @@
                     <a class="v-margin mdc-button mdc-button--raised" href="/post/categories/{{primaryResponse.hits.hits.[0]._source.categories_slug.[0]}}">Read more</a>
                 </div>
                 {{/compare}}
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="footer-image faqs">
+    <div class="container-fluid">
+        <div class="mdc-layout-grid">
+            <div class="mdc-layout-grid__inner">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+                    <h3>Frequently asked questions</h3>
+                    <p>What is a SCIO?</p>
+                    <p>Do I need to be a charity to fundraise?</p>
+                    <p>Can we pay the trustees of our charity?</p>
+                    <p>What is an honorarium?</p>
+                    <p>How long does it take to set up a charity?</p>
+                    <a href="/setting-up-a-charity/frequently-asked-questions" class="mdc-button mdc-button--raised">See all FAQs</a>
+                </div>
             </div>
         </div>
     </div>
