--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -95,6 +95,7 @@ $nav-height: 2.5rem;
     --mdc-theme-primary-light: #6FB744;
     --mdc-theme-primary-dark: #6FB744;
 }
+.page-content,
 .home .cta-content,
 .home .latest-content,
 .home .gist.tfn-post,
@@ -591,15 +592,17 @@ a:hover {
     background-image: linear-gradient(var(--mdc-theme-primary-fade), var(--mdc-theme-primary-fade)),url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2017/10/Drake-Music-06.jpg');
     text-align: center;
     color: white;
-    padding: $spacing-unit $spacing-unit*2.5;
+    padding: $spacing-unit 0 $spacing-unit*2.5;
     h3 {
         font-weight: 800;
-        padding-bottom: $spacing-unit/2;
+        padding-bottom: $spacing-unit;
     }
     .mdc-button {
         color: white;
         border: 2px solid white;
         margin-top: $spacing-unit;
+        text-transform: none;
+        background: transparent;
     }
 }
 .splash-image {
@@ -908,7 +911,7 @@ h1.mdc-typography--title {
     }
 }
 
-.page-content {
+.container-content {
     ul {
         padding-left: 0;
         li {
