--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -636,13 +636,17 @@ a:hover {
         line-height: $spacing-unit*3;
         letter-spacing: -0.08rem;
         margin-bottom: $spacing-unit/2;
-        .mdc-typography--caption {
-            font-size: 1.2rem;
-        }
         .photo-wee {
             max-height: 45px;
             max-width: 45px;
             vertical-align: bottom;
+            margin-right: $spacing-unit;
+            float: left;
+        }
+        .mdc-typography--caption {
+            font-size: 1.2rem;
+            margin-top: -$spacing-unit/10;
+            display: block;
         }
     }
 }
