--- a/functions/test-db/json2/scvo/templates/home.hbs
+++ b/functions/test-db/json2/scvo/templates/home.hbs
@@ -1,3 +1,15 @@
+<div class="splash-image {{> header_splash}}">
+    <div class="container-fluid">
+        <div class="mdc-layout-grid">
+            <h1 class="header-text">
+                <span class="header-text-banner">
+                    Hello, we're SCVO
+                </span>
+            </h1>
+        </div>
+    </div>
+</div>
+
 <section class="featured-content">
     <div class="container-fluid">
         <p>&nbsp;</p>
