--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -649,6 +649,16 @@ a:hover {
             display: block;
         }
     }
+    p.header-extra {
+        font-weight: 600;
+        color: white;
+        font-size: 1.1rem;
+        padding: $spacing-unit 0;
+    }
+    .mdc-button {
+        text-transform: none;
+        border: 2px solid white;
+    }
 }
 .splash-image-scvo-event h1.header-text,
 .splash-image-scvo-cms-post h1.header-text,
@@ -663,6 +673,19 @@ a:hover {
     //     padding: 0 0 0.3rem 0;
     //     box-shadow: 0.75rem 0 0 rgba(0,0,0,0.3), -0.75rem 0 0 rgba(0,0,0,0.3);
     // }
+}
+.home {
+    .splash-image {
+        height: 300px;
+        .mdc-layout-grid {
+            margin-left: 5%;
+            width: 39%;
+        }
+        h1.header-text {
+            font-size: 5rem;
+            line-height: 4rem;
+        }
+    }
 }
 .credit-union .splash-image {
     min-height: $spacing-unit*11;
