--- a/functions/test-db/json2/scvo/templates/home.hbs
+++ b/functions/test-db/json2/scvo/templates/home.hbs
@@ -3,9 +3,15 @@
         <div class="mdc-layout-grid">
             <h1 class="header-text">
                 <span class="header-text-banner">
-                    Hello, we're SCVO
+                    Hello,<br />
+                    we're SCVO
                 </span>
             </h1>
+            <p class="header-extra">
+                Championing Scotland's vibrant charities,<br />
+                voluntary organisations &amp; Social Enterprises
+            </p>
+            <a href="/about" class="mdc-button mdc-button--raised">Read more</a>
         </div>
     </div>
 </div>
