--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -56,6 +56,7 @@ $nav-height: 2.5rem;
 }
 .search-result.scvo-document,
 .search-result.scvo-cms-post,
+.gist.scvo-cms-post,
 .list.scvo-cms-post,
 .press-media,
 .blogs,
