--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -54,6 +54,7 @@ $nav-height: 2.5rem;
     --mdc-theme-primary-light: #C2185B; // Pink 700
     --mdc-theme-primary-dark: #880E4F; // Pink 900
 }
+.related-posts,
 .search-result.scvo-document,
 .search-result.scvo-cms-post,
 .gist.scvo-cms-post,
@@ -157,6 +158,7 @@ main {
 .mdc-textfield__input,
 .mdc-typography--title,
 .mdc-card__title--large,
+.mdc-typography--caption,
 .mdc-typography--headline,
 .mdc-card__supporting-text,
 .mdc-typography--subheading2,
@@ -641,12 +643,13 @@ a:hover {
             max-height: 45px;
             max-width: 45px;
             vertical-align: bottom;
-            margin-right: $spacing-unit;
+            margin: $spacing-unit/3 0 $spacing-unit*2 $spacing-unit;
             float: left;
         }
         .mdc-typography--caption {
             font-size: 1.2rem;
-            margin-top: -$spacing-unit/10;
+            letter-spacing: 0.02rem;
+            margin: $spacing-unit/3 0 0;
             display: block;
         }
     }
