--- a/functions/test-db/json2/scvo/templates/home.hbs
+++ b/functions/test-db/json2/scvo/templates/home.hbs
@@ -39,7 +39,7 @@
 
 <section class="cta-content splash-image">
     <div class="container-fluid">
-        <div class="cta-grid">
+        <div class="cta-grid mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-tablet mdc-layout-grid__cell--span-12-desktop">
                     <h2>
@@ -77,7 +77,7 @@
 
 <section class="latest-content">
     <div class="container-fluid">
-        <div class="latest-grid">
+        <div class="latest-grid mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-tablet mdc-layout-grid__cell--span-4-desktop">
                     <h2>
