--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -100,6 +100,8 @@ $nav-height: 2.5rem;
 .page-content,
 .home .cta-content,
 .home .latest-content,
+.home .gist.scvo-cms-post,
+.home .gist.goodmoves-job,
 .home .gist.tfn-post,
 .services {
     --mdc-theme-primary: #1565C0; // Blue 800
