--- a/functions/test-db/json2/scvo/templates/home.hbs
+++ b/functions/test-db/json2/scvo/templates/home.hbs
@@ -24,7 +24,7 @@
         <p>&nbsp;</p>
         <p>&nbsp;</p>
         <p>&nbsp;</p>
-        <h1 style="text-align:center;">TBC</h1>
+        <h1 style="text-align:center;">{ this is a new website in development }</h1>
         <p>&nbsp;</p>
         <p>&nbsp;</p>
         <p>&nbsp;</p>
