Fix mistake in post splash

--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -645,7 +645,7 @@ a:hover {
             max-height: 45px;
             max-width: 45px;
             vertical-align: bottom;
-            margin: $spacing-unit/3 0 $spacing-unit*2 $spacing-unit;
+            margin: $spacing-unit/3 $spacing-unit $spacing-unit*2 0;
             float: left;
         }
         .mdc-typography--caption {
