--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -1,5 +1,5 @@
-@import url(https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css);
-@import url(//fonts.googleapis.com/css?family=Open+Sans:400,600,700);
+@import url('//cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css');
+@import url('//fonts.googleapis.com/css?family=Open+Sans:400,600,700');
 
 $spacing-unit: 1rem;
 $nav-height: 2.5rem;
