--- a/functions/test-db/json2/scvo/templates/post.hbs
+++ b/functions/test-db/json2/scvo/templates/post.hbs
@@ -25,6 +25,13 @@
                 {{/with}}
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 sidebar post-sidebar">
+                {{#if primaryResponse.hits.hits.[0]._source.is_press_release}}
+                <ul class="supplimentary-list">
+                    {{#each supplimentaryResponses.category_posts.hits.hits}}
+                    {{{_source.rendered.sidebar}}}
+                    {{/each}}
+                </ul>
+                {{else}}
                 {{#if primaryResponse.hits.hits.[0]._source.categories}}
                 {{#compare primaryResponse.hits.hits.[0]._source.categories.[0] "!==" 'Press releases'}}
                 <div class="author_about">
@@ -51,6 +58,7 @@
                 </ul>
                 {{/compare}}
                 {{/compare}}
+                {{/if}}
                 {{/if}}
             </div>
             {{#compare supplimentaryResponses.tfn_related_posts.hits.total ">" 0}}
